tech-list-update

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 				<section id="features">
 					<div class="container">
 						<header>
-							<h2>Gentlemen, behold! This is <strong>Strongly Typed</strong>!</h2>
+							<h2>Welcome to <strong>Technical List</strong> @ <strong>LimsLab</strong>!</h2>
 						</header>
 						<div class="row aln-center">
 							<div class="col-4 col-6-medium col-12-small">
@@ -63,11 +63,10 @@
 									<section>
 										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 										<header>
-											<h3>Okay, so what is this?</h3>
+											<h3>Native IM-MS+</h3>
 										</header>
-										<p>This is <strong>Strongly Typed</strong>, a free, fully responsive site template
-										by <a href="http://html5up.net">HTML5 UP</a>. Free for personal and commercial use under the
-										<a href="http://html5up.net/license">CCA 3.0 license</a>.</p>
+										<p>As a key structural mass spectrometric tool, <strong>Native IM-MS</strong> is greatly comprementary to probing proein structure
+										with unprecedented analytical speed and great economics in sample consumption.</p>
 									</section>
 
 							</div>
@@ -77,11 +76,10 @@
 									<section>
 										<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
 										<header>
-											<h3>Nice! What is HTML5 UP?</h3>
+											<h3>In-cell MS+</h3>
 										</header>
-										<p><a href="http://html5up.net">HTML5 UP</a> is a side project of <a href="http://twitter.com/ajlkn">AJ’s</a> (= me).
-										I started it as a way to both test my responsive tools and sharpen up my coding
-										and design skills a bit.</p>
+										<p> <a href="https://pubs.acs.org/doi/abstract/10.1021/acs.analchem.7b05055"><strong>In-cell MS</strong></a> is a new in situ MS tool,
+										proposed in 2018 by Li et al. and desinged for rapid protein and protein complex identification from single living cells. </p>
 									</section>
 
 							</div>
@@ -91,10 +89,10 @@
 									<section>
 										<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 										<header>
-											<h3>What's this built with?</h3>
+											<h3>Tagerted Proteomics+</h3>
 										</header>
-										<p><strong>Responsive Tools</strong> is a simple set of tools for building responsive
-										sites and apps. All of my templates at <a href="http://html5up.net">HTML5 UP</a> are built using these tools.</p>
+										<p><strong>Targeted Proteomics</strong> is a most traditional and best established, large-scale MS strategy to analyze proteome with 
+										most attainable throughput so far. </p>
 									</section>
 
 							</div>
