--- a/gallery.html
+++ b/gallery.html
@@ -1,15 +1,17 @@
 <!DOCTYPE HTML>
 <!--
-	LimsLab @ NKU
+	Strongly Typed by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
 	<head>
-		<title>LimsLab @ NKU</title>
+		<title>Right Sidebar - Strongly Typed by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
-	<body class="homepage is-preload">
+	<body class="right-sidebar is-preload">
 		<div id="page-wrapper">
 
 			<!-- Header -->
@@ -17,92 +19,36 @@
 					<div class="container">
 
 						<!-- Logo -->
-							<h1 id="logo"><a href="index.html">LimsLab @ NKU </a></h1>
-							<p>Native Structural Mass Spectrometry</p>
+							<h1 id="logo"><a href="index.html">Strongly Typed</a></h1>
+							<p>A responsive HTML5 site template. Manufactured by HTML5 UP.</p>
 
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
-									<li><a class="icon solid fa-home" href="index.html"><span>Home</span></a></li>
+									<li><a class="icon solid fa-home" href="index.html"><span>Introduction</span></a></li>
 									<li>
-										<a href="#" class="icon fa-chart-bar"><span>People</span></a>
+										<a href="#" class="icon fa-chart-bar"><span>Dropdown</span></a>
 										<ul>
-											<li><a href="#">PI</a></li>
-											<li><a href="#">Current Members</a></li>
-											<li><a href="#">Alumni</a></li>
-											<li><a href="#">Collaborators</a></li>
+											<li><a href="#">Lorem ipsum dolor</a></li>
+											<li><a href="#">Magna phasellus</a></li>
+											<li><a href="#">Etiam dolore nisl</a></li>
+											<li>
+												<a href="#">Phasellus consequat</a>
+												<ul>
+													<li><a href="#">Magna phasellus</a></li>
+													<li><a href="#">Etiam dolore nisl</a></li>
+													<li><a href="#">Phasellus consequat</a></li>
+												</ul>
+											</li>
+											<li><a href="#">Veroeros feugiat</a></li>
 										</ul>
 									</li>
-									<li><a class="icon solid fa-cog" href="news.html"><span>News</span></a></li>
-									<li><a class="icon solid fa-sitemap" href="publication.html"><span>Publication</span></a></li>
-									<li><a class="icon solid fa-retweet" href="gallery.html"><span>Gallery</span></a></li>
-									<li><a class="icon solid fa-sitemap" href="research.html"><span>Research</span></a></li>
+									<li><a class="icon solid fa-cog" href="left-sidebar.html"><span>Left Sidebar</span></a></li>
+									<li><a class="icon solid fa-retweet" href="right-sidebar.html"><span>Right Sidebar</span></a></li>
+									<li><a class="icon solid fa-sitemap" href="no-sidebar.html"><span>No Sidebar</span></a></li>
 								</ul>
 							</nav>
 
-					</div>
-				</section>
-
-			<!-- Features -->
-				<section id="features">
-					<div class="container">
-						<header>
-							<h2>Welcome to <strong>Technical List</strong> @ <strong>LimsLab</strong>!</h2>
-						</header>
-						<div class="row aln-center">
-							<div class="col-4 col-6-medium col-12-small">
-
-								<!-- Feature -->
-									<section>
-										<a href="research.html" class="image featured"><img src="images/LimsLab_logo_simplified.jpg" alt="" /></a>
-										<header>
-											<h3>Native IM-MS+</h3>
-										</header>
-										<p>As a key structural mass spectrometric tool, <strong>Native IM-MS</strong> is greatly comprementary to probing proein structure
-										with unprecedented analytical speed and great economics in sample consumption.</p>
-									</section>
-
-							</div>
-							<div class="col-4 col-6-medium col-12-small">
-
-								<!-- Feature -->
-									<section>
-										<a href="#" class="image featured"><img src="images/LimsLab_logo_simplified.jpg" alt="" /></a>
-										<header>
-											<h3>In-cell MS+</h3>
-										</header>
-										<p> <a href="https://pubs.acs.org/doi/abstract/10.1021/acs.analchem.7b05055"><strong>In-cell MS</strong></a> is a new in situ MS tool,
-										proposed in 2018 by Li et al. and desinged for rapid protein and protein complex identification from single living cells. </p>
-									</section>
-
-							</div>
-							<div class="col-4 col-6-medium col-12-small">
-
-								<!-- Feature -->
-									<section>
-										<a href="#" class="image featured"><img src="images/LimsLab_logo_simplified.jpg" alt="" /></a>
-										<header>
-											<h3>Tagerted Proteomics+</h3>
-										</header>
-										<p><strong>Targeted Proteomics</strong> is a most traditional and best established, large-scale MS strategy to analyze proteome with 
-										most attainable throughput so far. </p>
-									</section>
-
-							</div>
-							<div class="col-12">
-								<ul class="actions">
-									<li><a href="research.html" class="button icon solid fa-file">Tell Me More</a></li>
-								</ul>
-							</div>
-						</div>
-					</div>
-				</section>
-
-			<!-- Banner -->
-				<section id="banner">
-					<div class="container">
-						<p>Use this space for <strong>profound thoughts</strong>.<br />
-						Or an enormous ad. Whatever.</p>
 					</div>
 				</section>
 
@@ -117,11 +63,11 @@
 									<!-- Post -->
 										<article class="box post">
 											<header>
-												<h2><a href="#">I don’t want to say <strong>it’s the aliens</strong> ...<br />
-												but it’s the aliens.</a></h2>
+												<h2>Behold! This is the <strong>right sidebar</strong> layout<br />
+												with a sidebar on the right!</h2>
 											</header>
-											<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-											<h3>I mean isn't it possible?</h3>
+											<span class="image featured"><img src="images/pic04.jpg" alt="" /></span>
+											<h3>Right is also not left</h3>
 											<p>Phasellus laoreet massa id justo mattis pharetra. Fusce suscipit
 											ligula vel quam viverra sit amet mollis tortor congue. Sed quis mauris
 											sit amet magna accumsan tristique. Curabitur leo nibh, rutrum eu malesuada
@@ -130,31 +76,7 @@
 											consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
 											justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet
 											mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique.
-											Curabitur leo nibh, rutrum eu malesuada in tristique.</p>
-											<ul class="actions">
-												<li><a href="#" class="button icon solid fa-file">Continue Reading</a></li>
-											</ul>
-										</article>
-
-									<!-- Post -->
-										<article class="box post">
-											<header>
-												<h2><a href="#">By the way, many thanks to <strong>regularjane</strong>
-												for these awesome demo photos</a></h2>
-											</header>
-											<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-											<h3>You should probably check out her work</h3>
-											<p>Phasellus laoreet massa id justo mattis pharetra. Fusce suscipit
-											ligula vel quam viverra sit amet mollis tortor congue. Sed quis mauris
-											sit amet magna accumsan tristique. Curabitur leo nibh, rutrum eu malesuada
-											in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat
-											consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
-											in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat
-											magna tempus veroeros lorem sed tempus aliquam lorem ipsum veroeros
-											consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
-											justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet
-											mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique.
-											Curabitur leo nibh, rutrum malesuada.</p>
+											Curabitur leo nibh, rutrum eu malesuada in tristique</p>
 											<p>Erat lorem ipsum veroeros consequat magna tempus lorem ipsum consequat
 											Phasellus laoreet massa id justo mattis pharetra. Fusce suscipit ligula
 											vel quam viverra sit amet mollis tortor congue. Sed quis mauris sit amet
@@ -162,10 +84,51 @@
 											tristique at erat. Curabitur leo nibh, rutrum eu malesuada in, tristique
 											at erat lorem ipsum dolor sit amet lorem ipsum sed consequat magna
 											tempus veroeros lorem sed tempus aliquam lorem ipsum veroeros consequat
-											magna tempus.</p>
-											<ul class="actions">
-												<li><a href="#" class="button icon solid fa-file">Continue Reading</a></li>
-											</ul>
+											magna tempus</p>
+											<p>Phasellus laoreet massa id justo mattis pharetra. Fusce suscipit
+											ligula vel quam viverra sit amet mollis tortor congue. Sed quis mauris
+											sit amet magna accumsan tristique. Curabitur leo nibh, rutrum eu malesuada
+											in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat
+											consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
+											in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat
+											magna tempus veroeros lorem sed tempus aliquam lorem ipsum veroeros
+											consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
+											justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet
+											mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique.
+											Curabitur leo nibh, rutrum eu malesuada in tristique</p>
+											<h3>Accumsan lorem ipsum veroeros</h3>
+											<p>Consequat Phasellus laoreet massa id in, tristique at erat lorem
+											ipsum dolor sit amet lorem ipsum sed consequat magna tempus veroeros
+											consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
+											justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet
+											mollis tortor congue. Sed quis mauris sit amet magna.</p>
+											<p>Phasellus laoreet massa id justo mattis pharetra. Fusce suscipit
+											ligula vel quam viverra sit amet mollis tortor congue. Sed quis mauris
+											sit amet magna accumsan tristique. Curabitur leo nibh, rutrum eu malesuada
+											in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat
+											consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
+											in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat
+											magna tempus veroeros lorem sed tempus aliquam lorem ipsum veroeros
+											consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
+											justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet
+											mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique.
+											Curabitur leo nibh, rutrum eu malesuada in tristique</p>
+											<h3>Ligula suspcipit fusce veroeros</h3>
+											<p>Nullam dolore etiam sed massa id in, tristique at erat lorem
+											ipsum dolor sit amet lorem ipsum sed consequat magna tempus veroeros
+											consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
+											justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet
+											mollis tortor congue. Sed quis mauris sit amet magna.</p>
+											<p>Sed massa id justo mattis pharetra. Fusce suscipit
+											ligula vel quam viverra sit amet mollis tortor congue. Sed quis mauris
+											sit amet magna accumsan tristique. Curabitur leo nibh, rutrum eu malesuada
+											in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat
+											consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
+											in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat
+											magna tempus veroeros lorem sed tempus aliquam lorem ipsum veroeros
+											consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
+											justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet
+											mollis tortor congue. Sed quis mauris sit amet magna accumsan.</p>
 										</article>
 
 								</div>
