--- a/publication.html
+++ b/publication.html
@@ -1,17 +1,15 @@
 <!DOCTYPE HTML>
 <!--
-	Strongly Typed by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+	LimsLab @ NKU
 -->
 <html>
 	<head>
-		<title>No Sidebar - Strongly Typed by HTML5 UP</title>
+		<title>LimsLab @ NKU</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
-	<body class="no-sidebar is-preload">
+	<body class="homepage is-preload">
 		<div id="page-wrapper">
 
 			<!-- Header -->
@@ -19,33 +17,26 @@
 					<div class="container">
 
 						<!-- Logo -->
-							<h1 id="logo"><a href="index.html">Strongly Typed</a></h1>
-							<p>A responsive HTML5 site template. Manufactured by HTML5 UP.</p>
+							<h1 id="logo"><a href="index.html">LimsLab @ NKU </a></h1>
+							<p>Native Structural Mass Spectrometry</p>
 
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
-									<li><a class="icon solid fa-home" href="index.html"><span>Introduction</span></a></li>
+									<li><a class="icon solid fa-home" href="index.html"><span>Home</span></a></li>
 									<li>
-										<a href="#" class="icon fa-chart-bar"><span>Dropdown</span></a>
+										<a href="#" class="icon fa-chart-bar"><span>People</span></a>
 										<ul>
-											<li><a href="#">Lorem ipsum dolor</a></li>
-											<li><a href="#">Magna phasellus</a></li>
-											<li><a href="#">Etiam dolore nisl</a></li>
-											<li>
-												<a href="#">Phasellus consequat</a>
-												<ul>
-													<li><a href="#">Magna phasellus</a></li>
-													<li><a href="#">Etiam dolore nisl</a></li>
-													<li><a href="#">Phasellus consequat</a></li>
-												</ul>
-											</li>
-											<li><a href="#">Veroeros feugiat</a></li>
+											<li><a href="#">PI</a></li>
+											<li><a href="#">Current Members</a></li>
+											<li><a href="#">Alumni</a></li>
+											<li><a href="#">Collaborators</a></li>
 										</ul>
 									</li>
-									<li><a class="icon solid fa-cog" href="left-sidebar.html"><span>Left Sidebar</span></a></li>
-									<li><a class="icon solid fa-retweet" href="right-sidebar.html"><span>Right Sidebar</span></a></li>
-									<li><a class="icon solid fa-sitemap" href="no-sidebar.html"><span>No Sidebar</span></a></li>
+									<li><a class="icon solid fa-cog" href="news.html"><span>News</span></a></li>
+									<li><a class="icon solid fa-sitemap" href="publication.html"><span>Publication</span></a></li>
+									<li><a class="icon solid fa-retweet" href="gallery.html"><span>Gallery</span></a></li>
+									<li><a class="icon solid fa-sitemap" href="research.html"><span>Research</span></a></li>
 								</ul>
 							</nav>
 
