--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 										</ul>
 									</li>
 									<li><a class="icon solid fa-cog" href="news.html"><span>News</span></a></li>
-									<li><a class="icon solid fa-sitemap" href="publication.html"><span>Publication</span></a></li>
 									<li><a class="icon solid fa-retweet" href="gallery.html"><span>Gallery</span></a></li>
 									<li><a class="icon solid fa-sitemap" href="research.html"><span>Research</span></a></li>
+									<li><a class="icon solid fa-sitemap" href="publication.html"><span>Publication</span></a></li>
 								</ul>
 							</nav>
 
@@ -337,7 +337,7 @@
 					</div>
 					<div id="copyright" class="container">
 						<ul class="links">
-							<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; LimsLab. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</div>
 				</section>
