--- a/research.html
+++ b/research.html
@@ -127,7 +127,7 @@
 				<section id="footer">
 					<div class="container">
 						<header>
-							<h2>Questions or comments? <strong>Get in touch:</strong></h2>
+							<h2>Open Positions or Collaborations? <strong>One-click Touch:</strong></h2>
 						</header>
 						<div class="row">
 							<div class="col-6 col-12-medium">
@@ -152,38 +152,38 @@
 							</div>
 							<div class="col-6 col-12-medium">
 								<section>
-									<p>Erat lorem ipsum veroeros consequat magna tempus lorem ipsum consequat Phaselamet
-									mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique. Curabitur
-									leo nibh, rutrum eu malesuada.</p>
+									<p>The LimsLab @ NKU (Nankai University) is always open to collaborate with multi-dicinplinary researchers
+									and currently have multiple opening positions with all-level research backgrounds, including Postdoc, PhD students
+									and undergruadate students. Please contact PI for more information as listed below: </p>
 									<div class="row">
 										<div class="col-6 col-12-small">
 											<ul class="icons">
 												<li class="icon solid fa-home">
-													1234 Somewhere Road<br />
-													Nashville, TN 00000<br />
-													USA
+													Research Center for Analytical Science, College of Chemistry, Nankai University<br />
+													94 Weijin Road, Tianjin 30071<br />
+													China
 												</li>
 												<li class="icon solid fa-phone">
 													(000) 000-0000
 												</li>
 												<li class="icon solid fa-envelope">
-													<a href="#">info@untitled.tld</a>
+													<a href="#">ligongyu1@126.com</a>
 												</li>
 											</ul>
 										</div>
 										<div class="col-6 col-12-small">
 											<ul class="icons">
 												<li class="icon brands fa-twitter">
-													<a href="#">@untitled</a>
+													<a href="https://twitter.com/gongyu_li">@gongyu_li</a>
 												</li>
 												<li class="icon brands fa-instagram">
-													<a href="#">instagram.com/untitled</a>
+													<a href="https://scholar.google.com/citations?hl=en&user=slw69f0AAAAJ&view_op=list_works&sortby=pubdate">scholar.google.com/gongyu_li</a>
 												</li>
 												<li class="icon brands fa-dribbble">
-													<a href="#">dribbble.com/untitled</a>
+													<a href="https://www.researchgate.net/profile/Gongyu_Li">researchgate.net/gongyu_li</a>
 												</li>
 												<li class="icon brands fa-facebook-f">
-													<a href="#">facebook.com/untitled</a>
+													<a href="https://www.facebook.com/gongyu.li.96/">facebook.com/gongyu_li</a>
 												</li>
 											</ul>
 										</div>
@@ -194,7 +194,7 @@
 					</div>
 					<div id="copyright" class="container">
 						<ul class="links">
-							<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; LimsLab @ Nankai University. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</div>
 				</section>
