--- a/gallery.html
+++ b/gallery.html
@@ -241,7 +241,7 @@
 												<textarea name="message" placeholder="Message"></textarea>
 											</div>
 											<div class="col-12">
-												<a href="#" class="form-button-submit button icon solid fa-envelope">Send Message</a>
+												<a href="mailto:ligongyu1@126.com" class="form-button-submit button icon solid fa-envelope">Send Message</a>
 											</div>
 										</div>
 									</form>
@@ -251,14 +251,13 @@
 								<section>
 									<p>The LimsLab @ NKU (Nankai University) is always open to collaborate with multi-dicinplinary researchers
 									and currently have multiple opening positions with all-level research backgrounds, including Postdoc, PhD students
-									and undergruadate students. Please contact PI for more information as listed below: </p>
+									and undergruadate students. Please contact PI (<a href="#"><strong>Dr. Gongyu Li</strong></a>) for more information as listed below: </p>
 									<div class="row">
 										<div class="col-6 col-12-small">
 											<ul class="icons">
 												<li class="icon solid fa-home">
-													Research Center for Analytical Science, College of Chemistry, Nankai University<br />
+													Research Center for Analytical Science, Nankai University<br />
 													94 Weijin Road, Tianjin 30071<br />
-													China
 												</li>
 												<li class="icon solid fa-phone">
 													(000) 000-0000
@@ -271,7 +270,7 @@
 										<div class="col-6 col-12-small">
 											<ul class="icons">
 												<li class="icon brands fa-twitter">
-													<a href="https://twitter.com/gongyu_li">@gongyu_li</a>
+													<a href="https://twitter.com/gongyu_li">twitter@gongyu_li</a>
 												</li>
 												<li class="icon brands fa-instagram">
 													<a href="https://scholar.google.com/citations?hl=en&user=slw69f0AAAAJ&view_op=list_works&sortby=pubdate">scholar.google.com/gongyu_li</a>
@@ -291,7 +290,7 @@
 					</div>
 					<div id="copyright" class="container">
 						<ul class="links">
-							<li>&copy; LimsLab @ Nankai University. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; LimsLab @ Nankai University.  All rights reserved.</li>
 						</ul>
 					</div>
 				</section>
