--- a/publication.html
+++ b/publication.html
@@ -127,7 +127,7 @@
 				<section id="footer">
 					<div class="container">
 						<header>
-							<h2>Open Positions or Collaborations? <strong>One-click Touch:</strong></h2>
+							<h2>Opening Positions or Collaborations? <strong>One-click Touch:</strong></h2>
 						</header>
 						<div class="row">
 							<div class="col-6 col-12-medium">
@@ -144,7 +144,7 @@
 												<textarea name="message" placeholder="Message"></textarea>
 											</div>
 											<div class="col-12">
-												<a href="mailto:ligongyu1@126.com" class="form-button-submit button icon solid fa-envelope">Send Message</a>
+												<a href="mailto:ligongyu1@126.com?subject=limslab-contact&body=xxxtest" class="form-button-submit button icon solid fa-envelope">Send Message</a>
 											</div>
 										</div>
 									</form>
@@ -152,9 +152,9 @@
 							</div>
 							<div class="col-6 col-12-medium">
 								<section>
-									<p>The LimsLab @ NKU (Nankai University) is always open to collaborate with multi-dicinplinary researchers
-									and currently have multiple opening positions with all-level research backgrounds, including Postdoc, PhD students
-									and undergruadate students. Please contact PI (<a href="#"><strong>Dr. Gongyu Li</strong></a>) for more information as listed below: </p>
+									<p>The <strong>LimsLab @ NKU</strong> (Nankai University) is always <strong>open</strong> to collaborate with multidiciplinary researchers
+									and has multiple <strong>opening</strong> positions for personnel with all-level research backgrounds, including Postdoc, PhD and 
+									undergruadate students. Please contact PI (<a href="#"><strong>Dr. Gongyu Li</strong></a>) for more information as listed below: </p>
 									<div class="row">
 										<div class="col-6 col-12-small">
 											<ul class="icons">
@@ -193,7 +193,7 @@
 					</div>
 					<div id="copyright" class="container">
 						<ul class="links">
-							<li>&copy; LimsLab @ Nankai University.  All rights reserved.</li>
+							<li>&copy; LimsLab @ Nankai University.     All rights reserved.</li>
 						</ul>
 					</div>
 				</section>
