--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 								<section>
 									<p>The <strong>LimsLab @ NKU</strong> (Nankai University) is always <strong>open</strong> to collaborate with multidiciplinary researchers
 									and has multiple <strong>opening</strong> positions for personnel with all-level research backgrounds, including Postdoc, PhD and 
-									undergruadate students. Please contact PI (<a href="#"><strong>Dr. Gongyu Li</strong></a>) for more information as listed below: </p>
+									undergruadate students. Please contact PI (<a href="people.html"><strong>Dr. Gongyu Li</strong></a>) for more information as listed below: </p>
 									<div class="row">
 										<div class="col-6 col-12-small">
 											<ul class="icons">
